<resources>
    <string name="app_name">FragmentEjemploList</string>
    <string name="nombre">Alex</string>
    <string name="telefono">123456789</string>
    <string name="email">alex@email.com</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="plikes">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
