<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/marginleft"
    card_view:cardCornerRadius="@dimen/corner_radius_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:src="@drawable/icon616660" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="@dimen/liketamanio"
                android:layout_height="@dimen/liketamanio"
                android:background="@drawable/icons8_me_gusta_48"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true" >

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pnombre"
                    android:textSize="@dimen/nombre_cardview"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ptelefono" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plikes"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/nombre_cardview"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>